<resources>
    <string name="app_name">Task Application</string>
    <string name="loading">Loading…</string>
    <string name="main_page">Main page</string>
    <string name="signup_page">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="not_a_member_yet_sign_up_here">Not a member yet? Sign up here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signed_in">Signed in</string>
    <string name="signed_out">Signed out</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="emailpassword_title_text">Email and Password</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase user ID: %s</string>
    <string name="firebase_display_name_fmt">Firebase display name: %s</string>
    <string name="firebase_profile_photo_fmt">Firebase profile photo: %s</string>
    <string name="image_quality_setting">Upload/download image quality: %s</string>

    <string name="title_activity_projects">Projects</string>
    <string name="title_create_project">Create project</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="user_page">User page</string>
    <string name="view_projects">View projects</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile settings</string>
    <string name="change_password">Change password</string>
    <string name="change_profImg">Change profile image</string>
    <string name="profile_image">Profile image</string>
    <string name="new_profile_image_url">New profile image URL</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirmation">Confirm new password</string>
    <string name="current_password">Current password</string>
    <string name="profile_image_url">Profile image URL</string>
    <string name="project_description">Description</string>
    <string name="project_name">Name</string>
    <string name="create_project">Create project</string>
    <string name="create_task">Create task</string>
    <string name="add_icon">Add icon</string>
    <string name="deadline">Deadline</string>
    <string name="project_deadline_time">dd-mm-yyyy 00:00:00</string>
    <string name="set">Set</string>
    <string name="project_keywords">Add keywords</string>
    <string name="radio_personal">Personal</string>
    <string name="radio_group">Group</string>
    <string name="change_imgQ">Change image quality</string>
    <string name="image_quality">Image quality</string>
    <string name="projects_list_modified_text">Modified: %s</string>
    <string name="task_description">Task description</string>
    <string name="upload_file">Upload File</string>
    <string name="pick_file">Select File</string>
    <string name="tv_upload_file_heading_text_placeholder">[File placeholder]</string>
    <string name="tv_file_information_placeholder">[Information placeholder]</string>
    <string name="tv_upload_progress">Upload progress</string>
    <string name="search_projects_hint">Search projects</string>
    <string name="add_users_hint">Add users to project</string>
    <string name="search_users_hint">Search users (3 characters required)</string>
    <string name="show_members_hint">Show project members</string>
    <string name="title_create_task">Create task</string>
    <string name="description_from_image">Description from image</string>
    <string name="delete_project">Delete project</string>

    <string-array name="image_quality_array">
        <item>Full (original size)</item>
        <item>High (1280x960 px)</item>
        <item>Low (640x480 px)</item>
    </string-array>
</resources>