<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/password" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp">

        <EditText
            android:id="@+id/et_password_current"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/new_password_confirmation" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <Button
            android:id="@+id/buttonChangePasswordSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>
