<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".CreateProjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/projectIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70sp"
            android:background="@color/colorPrimary"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <Button
            android:id="@+id/buttonAddIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/add_icon"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/createProjectFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <EditText
            android:id="@+id/et_project_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/project_name" />

        <EditText
            android:id="@+id/et_project_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/project_description" />

    </LinearLayout>

        <Button
            android:id="@+id/createProjectButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/create_project"/>





</LinearLayout>