<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/descriptionImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:background="@color/colorPrimary"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>

    <Button
        android:id="@+id/buttonAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/description_from_image"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:text="@string/create_task" />

        </LinearLayout>
        -->

        <LinearLayout
            android:id="@+id/taskFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:inputType="textUri"
                android:hint="@string/task_description" />

            <TextView
                android:id="@+id/task_deadline_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="?android:textColorHint"
                android:text="@string/deadline" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/et_task_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:hint="@string/project_deadline_time"
                    android:background="@drawable/border"/>

                <Button
                    android:id="@+id/buttonSetTaskDeadline"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/set"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/taskButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp">

            <Button
                android:id="@+id/buttonSaveTask"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>