<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:text="@string/profile_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp">

        <EditText
            android:id="@+id/et_image_url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:inputType="textUri"
            android:hint="@string/new_profile_image_url" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <Button
            android:id="@+id/buttonChangeProfImgSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>