<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UploadFileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_pick_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/pick_file"/>

        <Button
            android:id="@+id/button_upload_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/upload_file"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tv_file_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:visibility="invisible"
        android:text="@string/tv_file_information_placeholder" />

    <LinearLayout
        android:id="@+id/upload_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_upload_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/tv_upload_progress" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/upload_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="50dp"
            android:minWidth="300dp"
            android:progress="1"
            android:progressBackgroundTint="@android:color/darker_gray"
            android:progressTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_upload_progress_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>